--- a/README.org
+++ b/README.org
@@ -1,13 +1,9 @@
 #+title: cl-ohm-todo-app
 
-
-
-* Installation
+Just a simple [[https://github.com/rudolfochrist/cl-ohm][CL-OHM]] usage example.
 
 * Usage
 
-* License
-
-Copyright (c) 2016 Sebastian Christ (rudolfo.christ@gmail.com)
-
-Released under the MIT license.
+1. Load the =cl-ohm-todo-app= example.
+2. =(cl-ohm-todo-app:start-server)=
+3. To stop the server run =(cl-ohm-todo-app:stop-server)=
