--- a/README.org
+++ b/README.org
@@ -6,4 +6,5 @@ Just a simple [[https://github.com/rudolfochrist/cl-ohm][CL-OHM]] usage example.
 
 1. Load the =cl-ohm-todo-app= example.
 2. =(cl-ohm-todo-app:start-server)=
-3. To stop the server run =(cl-ohm-todo-app:stop-server)=
+3. Browse to [[http://localhost:4242]]
+4. To stop the server run =(cl-ohm-todo-app:stop-server)=
